--- a/example.env
+++ b/example.env
@@ -1,6 +1,6 @@
 # REQUIRED MODULE SETTINGS
 
-MODULE_NAME=boilerplate
+MODULE_NAME=jira-service-management
 MODULE_TYPE=Output
 
 # REQUIRED API SETTINGS
@@ -10,3 +10,11 @@ INGRESS_HOST=0.0.0.0
 INGRESS_PORT=80
 
 # YOU CAN ADD REMAINING MODULE SETTINGS BELOW
+
+ATLASSIAN_DOMAIN=https://your-domain.atlassian.net
+ATLASSIAN_EMAIL=john.blue@invalid.com
+ATLASSIAN_API_TOKEN=api-token-1234
+SERVICE_DESK_ID=1
+REQUEST_TYPE_ID=33
+SUMMARY_LABEL=summary
+DESCRIPTION_LABEL=description
